--- a/internal/views/admin/index.html
+++ b/internal/views/admin/index.html
@@ -13,8 +13,8 @@
     <script>
         var pageCount = {{.pageCount}};
         var currentPage = {{.current_page}};
-        page_type = {{.page_type}}
-        key_word = {{.key_word}}
+        var page_type = {{.page_type}}
+        var key_word = {{.key_word}}
     </script>
     <!-- 分页 -->
     <script src="/static/js/index_articles.js"></script>
@@ -82,7 +82,7 @@
     </div>
 
     <nav aria-label="Page navigation">
-        <ul id = "index_article_page" class="pagination">
+        <ul id="index_article_page" class="pagination">
         </ul>
     </nav>
     <br/>
