--- a/internal/views/article/_show_is_collect.html
+++ b/internal/views/article/_show_is_collect.html
@@ -1,13 +1,15 @@
 {{define "_show_is_collect.html"}}
     <script>
         //收藏文章
-        function collect(article_id,is_collect) {
+        function collect(article_id, is_collect) {
             $.ajaxSetup({cache: false});
-            var url = "/collect_article/"+article_id+"/"+is_collect
+            var url = "/collect_article/" + article_id + "/" + is_collect
             //alert("点赞成功"+url)
-            $.ajax({url:url,success:function(result){
+            $.ajax({
+                url: url, success: function (result) {
                     $("#is_collect").html(result);
-                }});
+                }
+            });
         }
     </script>
     {{$article := .article}}
@@ -15,9 +17,9 @@
     {{$user_is_collect := $article.FindUserIsCollect $current_user}}
     {{if ne .article_user.Username .user_session}}
         {{if $user_is_collect}}
-            <span id = "collect" style="cursor:pointer;" onclick="collect({{.article.ID}},false)">取消收藏</span>
+            <span id="collect" style="cursor:pointer;" onclick="collect({{.article.ID}},false)">取消收藏</span>
         {{else}}
-            <span id = "collect" style="cursor:pointer;" onclick="collect({{.article.ID}},true)">收藏</span>
+            <span id="collect" style="cursor:pointer;" onclick="collect({{.article.ID}},true)">收藏</span>
         {{end}}
     {{end}}
 {{end}}
