--- a/internal/views/user/_basic_setting.html
+++ b/internal/views/user/_basic_setting.html
@@ -1,6 +1,6 @@
 {{define "_basic_setting.html"}}
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             // 在键盘按下并释放及提交后验证提交表单
             $("#registerForm").validate({
                 rules: {
@@ -27,40 +27,45 @@
         });
 
     </script>
-<form action="/update_user" enctype="multipart/form-data" method = "post" class="form-horizontal" id = "registerForm"  autocomplete="off">
-    <div class="form-group">
-{{/*        <label for="exampleInputFile">头像</label>*/}}
-        <img src="{{.current_user.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown" style="width: 35px;height: 35px;">
-        <input type="file" id="exampleInputFile" accept="image/*" name = "file" class = "file">
-    </div>
-    <hr/>
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
-        <div >
-            <input type="text" class="form-control" id="username"  name = "username" style="width: 40%;" placeholder={{.current_user.Username}}>
+    <form action="/update_user" enctype="multipart/form-data" method="post" class="form-horizontal" id="registerForm"
+          autocomplete="off">
+        <div class="form-group">
+            {{/*        <label for="exampleInputFile">头像</label>*/}}
+            <img src="{{.current_user.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown"
+                 style="width: 35px;height: 35px;">
+            <input type="file" id="exampleInputFile" accept="image/*" name="file" class="file">
         </div>
+        <hr/>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
+            <div>
+                <input type="text" class="form-control" id="username" name="username" style="width: 40%;"
+                       placeholder={{.current_user.Username}}>
+            </div>
 
-    </div>
-    <hr/>
-    <div class="form-group">
-        <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
-        <div >
-            <input type="password" class="form-control" id="password" autocomplete="new-password"  name = "password" style="width: 40%;"  >
         </div>
+        <hr/>
+        <div class="form-group">
+            <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
+            <div>
+                <input type="password" class="form-control" id="password" autocomplete="new-password" name="password"
+                       style="width: 40%;">
+            </div>
 
-    </div>
-    <hr/>
-    <div class="form-group">
-        <label for="inputEmail3" class="col-sm-2 control-label">email</label>
-        <div >
-            <input type="email" class="form-control"  id="email" name = "email" style="width: 40%;" placeholder={{.current_user.Email}} >
         </div>
+        <hr/>
+        <div class="form-group">
+            <label for="inputEmail3" class="col-sm-2 control-label">email</label>
+            <div>
+                <input type="email" class="form-control" id="email" name="email" style="width: 40%;"
+                       placeholder={{.current_user.Email}}>
+            </div>
 
-    </div>
-    <hr/>
+        </div>
+        <hr/>
 
-    <button type="submit" class="btn btn-default">修改</button>
-</form>
+        <button type="submit" class="btn btn-default">修改</button>
+    </form>
 
 
 
