--- a/internal/views/admin/navbar.html
+++ b/internal/views/admin/navbar.html
@@ -3,7 +3,8 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -24,18 +25,19 @@
                             <li><a href="#">笑话</a></li>
                             <li><a href="/batch/index/1">解绑记录</a></li>
                             <li><a href="/picture_recognition">ICCID图片识别</a></li>
-{{/*                            <li class="divider"></li>*/}}
-{{/*                            <li><a href="#"></a></li>*/}}
-{{/*                            <li class="divider"></li>*/}}
-{{/*                            <li><a href="#">xx</a></li>*/}}
+                            {{/*                            <li class="divider"></li>*/}}
+                            {{/*                            <li><a href="#"></a></li>*/}}
+                            {{/*                            <li class="divider"></li>*/}}
+                            {{/*                            <li><a href="#">xx</a></li>*/}}
                         </ul>
                     </li>
                 </ul>
                 <!-- 登陆注册 -->
-                <form class="navbar-form navbar-right" role="search" >
+                <form class="navbar-form navbar-right" role="search">
                     {{if .user_session }}
                         <li class="dropdown">
-                            <img src="{{.current_user.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown" style="width: 35px;height: 35px;">
+                            <img src="{{.current_user.ProfilePhoto}}" alt="..." class="img-circle"
+                                 data-toggle="dropdown" style="width: 35px;height: 35px;">
 
                             <ul class="dropdown-menu">
                                 <li><a href="/user/{{.user_session}}">我的主页</a></li>
@@ -43,12 +45,12 @@
                                 <li><a href="/user_setting">设置</a></li>
                                 <li><a href="/logout">退出</a></li>
                             </ul>
-                            <a href="/new_article" role="button" class = "btn btn-default">写文章</a>
+                            <a href="/new_article" role="button" class="btn btn-default">写文章</a>
                         </li>
 
                     {{else}}
-                        <a href="/register" role="button" class = "btn btn-default">注册</a>
-                        <a href="/signin" role="button" class = "btn btn-default">登陆</a>
+                        <a href="/register" role="button" class="btn btn-default">注册</a>
+                        <a href="/signin" role="button" class="btn btn-default">登陆</a>
 
                     {{end}}
 
