--- a/internal/views/admin/signin.html
+++ b/internal/views/admin/signin.html
@@ -15,7 +15,7 @@
     <!-- 登陆校验 -->
     <script src="/static/js/signin.js"></script>
     <style>
-        .error{
+        .error {
             color: #ff0000;
         }
     </style>
@@ -24,18 +24,20 @@
 <body>
 <div class="container">
     <div class="row ">
-        <div class="col-md-12  col-md-offset-2"  style="margin-top: 250px;">
+        <div class="col-md-12  col-md-offset-2" style="margin-top: 250px;">
             <form class="form-horizontal" id="signinForm" action="/login" method="post">
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">用户名</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="inputUserName3" placeholder="请输入用户名" name = "username" style="width: 30%;">
+                        <input type="text" class="form-control" id="inputUserName3" placeholder="请输入用户名" name="username"
+                               style="width: 30%;">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputPassword3" class="col-sm-2 control-label">密码</label>
                     <div class="col-sm-10">
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码" name = "password" style="width: 30%;">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="请输入密码"
+                               name="password" style="width: 30%;">
                     </div>
                 </div>
                 <div class="form-group">
@@ -50,7 +52,7 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <button type="submit" class="btn btn-default">登陆</button>
-                        <a href="/register" role="button" class = "btn btn-default">注册</a>
+                        <a href="/register" role="button" class="btn btn-default">注册</a>
                     </div>
 
                 </div>
