--- a/internal/views/article/edit_article.html
+++ b/internal/views/article/edit_article.html
@@ -9,12 +9,13 @@
     <link href="/static/css/blog_hone.css" rel="stylesheet">
     <link href="/static/css/base.css" rel="stylesheet">
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="/static/js/wangEditor.min.js" type="text/javascript" ></script>
+    <script src="/static/js/wangEditor.min.js" type="text/javascript"></script>
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
     <style type="text/css">
         .toolbar {
             border: 1px solid #ccc;
         }
+
         .text {
             border: 1px solid #ccc;
             height: 400px;
@@ -28,32 +29,33 @@
         <div class="col-md-10 col-md-offset">
             <form class="form-horizontal" action="/update_article/{{.article.ID}}" method="post">
                 <div class="form-group">
-                    <input type="text" class="form-control"  value = "{{.article.ArticleTitle}}" name = "article_title">
+                    <input type="text" class="form-control" value="{{.article.ArticleTitle}}" name="article_title">
                     <div style="padding: 5px 0; color: #ccc"></div>
                     <div id="article_toolbar" class="toolbar">
                     </div>
                     <div style="padding: 5px 0; color: #ccc"></div>
-                    <div id="article_content_text" class="text" >
+                    <div id="article_content_text" class="text">
 
                     </div>
                     <!-- textarea用来记录文本框中的内容 用来提交到后台，默认隐藏  hidden -->
-                    <textarea  id="article_content_textarea" name = "article_content"  style="width:100%; height:200px;" hidden></textarea>
+                    <textarea id="article_content_textarea" name="article_content" style="width:100%; height:200px;"
+                              hidden></textarea>
                     <span>请选择标签</span>
-                    <select class="form-control" style="width:30%;" name = "article_label" >
+                    <select class="form-control" style="width:30%;" name="article_label">
                         {{$label := .label}}
                         {{range .labels}}
                             {{if eq .ID $label.ID}}
-                                <option value ="{{.ID}}" selected>{{.LabelName}}</option>
+                                <option value="{{.ID}}" selected>{{.LabelName}}</option>
                             {{else}}
-                                <option value ="{{.ID}}">{{.LabelName}}</option>
+                                <option value="{{.ID}}">{{.LabelName}}</option>
                             {{end}}
                         {{end}}
                     </select>
 
                     <label class="checkbox-inline">
-                        <input type="checkbox" id="update_is_public_checkbox" name = "is_public" value="false"> 设置为私密
+                        <input type="checkbox" id="update_is_public_checkbox" name="is_public" value="false"> 设置为私密
                     </label>
-                    <button type="submit" id = "get_html"  class="btn btn-default">提交</button>
+                    <button type="submit" id="get_html" class="btn btn-default">提交</button>
                     <script type="text/javascript">
                         //把获取到的文章 以html的方式显示在编辑框中
                         $('#article_content_text').html({{.article.ArticleContent}});
@@ -71,8 +73,10 @@
                         $text1.val(editor1.txt.html())
 
                         //根据文章是否是开放权限， 来决定页面checkbox是否默认选中
-                        if ({{.article.IsPublic}} == false){
-                            document.getElementById('update_is_public_checkbox').checked="checked";
+                        if ({{.article.IsPublic}} == false
+                        )
+                        {
+                            document.getElementById('update_is_public_checkbox').checked = "checked";
                         }
                     </script>
                 </div>
