--- a/internal/views/article/new_article.html
+++ b/internal/views/article/new_article.html
@@ -9,12 +9,13 @@
     <link href="/static/css/blog_hone.css" rel="stylesheet">
     <link href="/static/css/base.css" rel="stylesheet">
     <script src="https://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="/static/js/wangEditor.min.js" type="text/javascript" ></script>
+    <script src="/static/js/wangEditor.min.js" type="text/javascript"></script>
     <script src="/static/libs/bootstrap/js/bootstrap.min.js"></script>
     <style type="text/css">
         .toolbar {
             border: 1px solid #ccc;
         }
+
         .text {
             border: 1px solid #ccc;
             height: 400px;
@@ -29,26 +30,27 @@
         <div class="col-md-10 col-md-offset">
             <form class="form-horizontal" action="/save_article" method="post">
                 <div class="form-group">
-                    <input type="text" class="form-control"  placeholder="请输入标题"  value = "【】"name = "article_title">
+                    <input type="text" class="form-control" placeholder="请输入标题" value="【】" name="article_title">
                     <div style="padding: 5px 0; color: #ccc"></div>
                     <div id="article_toolbar" class="toolbar">
                     </div>
                     <div style="padding: 5px 0; color: #ccc"></div>
-                    <div id="article_content_text" class="text" >
+                    <div id="article_content_text" class="text">
                         <p>请输入内容</p>
                     </div>
                     <!-- textarea用来记录文本框中的内容 用来提交到后台，默认隐藏 -->
-                    <textarea  id="article_content_textarea" name = "article_content" style="width:100%; height:200px;" hidden></textarea>
+                    <textarea id="article_content_textarea" name="article_content" style="width:100%; height:200px;"
+                              hidden></textarea>
                     <span>请选择标签</span>
-                    <select class="form-control" style="width:30%;" name = "article_label" >
+                    <select class="form-control" style="width:30%;" name="article_label">
                         {{range .labels}}
-                            <option value ="{{.ID}}">{{.LabelName}}</option>
+                            <option value="{{.ID}}">{{.LabelName}}</option>
                         {{end}}
                     </select>
                     <label class="checkbox-inline">
-                        <input type="checkbox" id="inlineCheckbox1" name = "is_public" value="false"> 设置为私密
+                        <input type="checkbox" id="inlineCheckbox1" name="is_public" value="false"> 设置为私密
                     </label>
-                    <button type="submit" id = "get_html"  class="btn btn-default">提交</button>
+                    <button type="submit" id="get_html" class="btn btn-default">提交</button>
                     <script type="text/javascript">
                         var E = window.wangEditor
                         var editor1 = new E('#article_toolbar', '#article_content_text')  // 两个参数也可以传入 elem 对象，class 选择器
