--- a/internal/views/article/show_article.html
+++ b/internal/views/article/show_article.html
@@ -17,17 +17,18 @@
 {{template "navbar.html" .}}
 <div class="container">
     <div class="row ">
-{{/*        <div class="col-md-10 col-md-offset-1">*/}}
-        <div class="col-md-12 " >
+        {{/*        <div class="col-md-10 col-md-offset-1">*/}}
+        <div class="col-md-12 ">
             <ul class="breadcrumb">
                 <li><a href="/index">Home</a></li>
                 <li class="active">{{.article.ArticleTitle}}</li>
             </ul>
-            <h3 >{{.article.ArticleTitle}}</h3>
+            <h3>{{.article.ArticleTitle}}</h3>
             <div class="row ">
                 <div class="col-md-1 " style="width: 50px;">
-                    <img src="{{.article_user.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown" style="width: 35px;height: 35px;">
-{{/*                    <span class="User_Data">头像</span><br/>*/}}
+                    <img src="{{.article_user.ProfilePhoto}}" alt="..." class="img-circle" data-toggle="dropdown"
+                         style="width: 35px;height: 35px;">
+                    {{/*                    <span class="User_Data">头像</span><br/>*/}}
                 </div>
                 <div class="col-md-2">
                     <span class="User_Data">{{.article_user.Username}}</span>
@@ -36,10 +37,11 @@
                 <span class="Create_Time" style="margin-right: 100px;">
                 <span class="glyphicon glyphicon-calendar"></span>{{dateFormat .article.CreatedAt "06-01-02 15:04"}}</span>
                 {{if eq .article_user.Username .user_session}}
-                <a href="/edit_article/{{.article.ID}}">编辑</a>
-                <a onclick="javascript:if (confirm('确定删除吗？')) { return true;}else{return false;};" href="/delete_article/{{.article.ID}}">删除</a>
+                    <a href="/edit_article/{{.article.ID}}">编辑</a>
+                    <a onclick="javascript:if (confirm('确定删除吗？')) { return true;}else{return false;};"
+                       href="/delete_article/{{.article.ID}}">删除</a>
                 {{end}}
-                <div id = "is_collect">
+                <div id="is_collect">
                     {{template "_show_is_collect.html" .}}
                 </div>
 
@@ -57,7 +59,8 @@
             <hr/>
             <div>
                 <form class="form-horizontal" action="/new_comment/{{.article.ID}}" method="post">
-                    <textarea class="form-control" id="new_article_comment" name = "new_article_comment" style="width:700px; height:100px;"placeholder="写下你的评论..." ></textarea>
+                    <textarea class="form-control" id="new_article_comment" name="new_article_comment"
+                              style="width:700px; height:100px;" placeholder="写下你的评论..."></textarea>
                     <button type="submit" class="btn btn-default" style="margin-left: 646px">提交</button>
                 </form>
             </div>
@@ -66,7 +69,7 @@
                 {{template "_show_comment.html" .}}
             </div>
 
-    </div>
+        </div>
     </div>
 </div>
 
